--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -2826,7 +2826,7 @@
                                         }
                                         <tr>
                                             <td class="text-center" style="width: 50%;" />
-                                            <td class="text-center" style="width: 10%;">Total</td>
+                                            <td class="text-center" style="width: 10%;">@L["Total"]</td>
                                             <td class="text-center" style="width: 10%;" />
                                             <td class="text-center" style="width: 10%;" />
                                             <td class="text-center" style="width: 10%;" />
