--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1202,7 +1202,7 @@
                                                 <Div class="col-10 pt-2 pb-4">
                                                     <select class="form-select form-select"
                                                     @onchange=@((e) => OnStyleCarouselChange(e, carouselImages, carouselImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value))>
-                                                        <option>Select Style</option>
+                                                        <option>@L["SelectStyle"]</option>
                                                         @foreach (object? enumValue in Enum.GetValues(typeof(StyleForCarouselImages)))
                                                         {
                                                             if (enumValue is not null && carouselImages.Any(a => a.CarouselStyle == (StyleForCarouselImages)enumValue))
@@ -1553,6 +1553,7 @@
                                                                 <Field>
                                                                     <FilePicker @ref="ProductRankingCarouselPickers[ProductRankingCarouselModules.IndexOf(productModule)]"
                                                                     Disabled="productModule.Images.Count >= 5"
+                                                                     FilePickerLocalizer="(key, args) => LocalizeFilePicker(key, args)"
                                                                     Multiple
                                                                     Changed="@(async (e) => await OnImageModuleUploadAsync(e,
                                                                                                                                productModule.Images,
@@ -1623,7 +1624,7 @@
                                                 <TextEdit @bind-Text="module.Title" />
                                             </Div>
                                             <Div Class="col-2 pb-1">
-                                                <Label>@L["Text"]</Label>
+                                                <Label>@L["Description"]</Label>
                                             </Div>
                                             <Div Class="col-12 pb-1">
                                                 <TinyMCEEditor @bind-Value="@module.Text"
@@ -1686,6 +1687,7 @@
                                                         <FilePicker @ref="imageModule.FilePicker"
                                                                     Disabled="imageModule.Images.Count >= 5"
                                                                     Multiple
+                                                                    FilePickerLocalizer="(key, args) => LocalizeFilePicker(key, args)"
                                                                     ShowMode="FilePickerShowMode.List"
                                                                     Accept="@(string.Join(", ", Constant.ValidImageExtensions))"
                                                                     Changed="(e) => OnPartnershipImageUploadAsync(e, imageModule)"
