Commit for Pk-1906

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1675,7 +1675,7 @@
                                         {
                                             <Div Class="mt-2">
                                                 <Label>
-                                                    @L["Row"] @(module.ImageModules.IndexOf(imageModule) + 1)
+                                                    @L["Row."+(module.ImageModules.IndexOf(imageModule) + 1)]
                                                     <Span>
                                                         <Tooltip Text="@L["Upto5ImagesAllowed"]" Display="Display.InlineBlock">
                                                             <Icon Name="IconName.InfoCircle" />
