--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/Steps/PayoutDetails/PayoutDetailFilters.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/Steps/PayoutDetails/PayoutDetailFilters.razor
@@ -142,6 +142,7 @@
         {
             TenantId = Context.TenantId!.Value,
             FeeType = Context.FeeType!.Value,
+            Year = Context.Year!.Value,
             StartDate = new DateTime(Context.Year.Value, 1, 1),
             EndDate = new DateTime(Context.Year.Value, 12, 31)
         };
