Commit For Pk-1914

--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -366,14 +366,14 @@
                         <InputNumber class="form-control" TValue="int?" @bind-Value="@CreateUpdateSetItemDto.LimitQuantity" />
                     </div>
                 </div>
-                <div class="row mt-2">
+                @* <div class="row mt-2">
                     <div class="col-3">
                         <label>@L["ShareProfit"]</label>
                     </div>
                     <div class="col-3">
                         <InputNumber class="form-control" TValue="int" @bind-Value="@CreateUpdateSetItemDto.ShareProfit" />
                     </div>
-                </div>
+                </div> *@
                 <div class="row mt-2">
                     <div class="col-3">
                         <label>@L["FreeShipping"]</label>
