--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
@@ -4,7 +4,7 @@
 @inherits PikachuComponentBase
 @inject ITCatCodTradeInfoAppService TCatCodTradeInfoAppService
 
-<Modal @bind-Visible="@Visible">
+<Modal @bind-Visible="@Visible" Class="tcat-file-upload-modal">
     <ModalContent Size="ModalSize.ExtraLarge">
         <ModalHeader>
             <ModalTitle>
