--- a/src/Kooco.Pikachu.Blazor/wwwroot/css/tenant-payout.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/css/tenant-payout.css
@@ -177,11 +177,11 @@
 
 
 /* File Import Modal */
-.modal-content {
+.tcat-file-upload-modal .modal-content {
     border-radius: 1rem;
 }
 
-.modal-header {
+.tcat-file-upload-modal .modal-header {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     color: white;
     padding: 1.5rem 2rem;
@@ -190,7 +190,7 @@
     align-items: center;
 }
 
-    .modal-header .close-btn {
+    .tcat-file-upload-modal .modal-header .close-btn {
         background: rgba(255, 255, 255, 0.2);
         border: none;
         color: white;
@@ -205,32 +205,32 @@
         transition: all 0.3s ease;
     }
 
-        .modal-header .close-btn:hover {
+        .tcat-file-upload-modal .modal-header .close-btn:hover {
             background: rgba(255, 255, 255, 0.3);
         }
 
-.modal-title h3 {
+.tcat-file-upload-modal .modal-title h3 {
     color: white;
     margin: 0;
 }
 
-.modal-title span {
+.tcat-file-upload-modal .modal-title span {
     color: white;
     font-weight: 300;
     font-size: 0.85rem;
 }
 
-.modal-body {
+.tcat-file-upload-modal .modal-body {
     padding: 1.5rem;
     padding-top: 2rem !important;
 }
 
-.modal-footer {
+.tcat-file-upload-modal .modal-footer {
     padding-right: 1.5rem;
     padding-left: 1.5rem;
 }
 
-    .modal-footer .back-btn {
+    .tcat-file-upload-modal .modal-footer .back-btn {
         margin: 0;
     }
 
@@ -246,13 +246,6 @@
 
 
 /* Payout Details */
-/*.payout-=stats-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 25px;
-}*/
-
 .payout-stats-card {
     border-radius: var(--radius);
     padding: 20px;
@@ -261,8 +254,6 @@
     display: flex;
     align-items: center;
     transition: var(--transition);
-    /*min-width: 250px;
-    flex: 1 0 calc(25% - 20px);*/
 }
 
     .payout-stats-card:hover {
