#PK-1895 Split Order updates

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -1788,7 +1788,7 @@
                             {
                                 <Button Clicked="SplitOrder"
                                 Type="ButtonType.Button"
-                                Class="btn btn-sm btn-secondary">
+                                Class="btn btn-sm btn-secondary me-1">
                                     @L["SplitOrder"]
                                 </Button>
                             }
@@ -1796,7 +1796,7 @@
                             {
                                 <Button Clicked="SplitOrder"
                                 Type="ButtonType.Button"
-                                Class="btn btn-sm btn-secondary">
+                                Class="btn btn-sm btn-secondary me-1">
                                     @L["SplitOrder"]
                                 </Button>
                             }
