Commit For Pk-1917 & Pk-1915

--- a/src/Kooco.Pikachu.Blazor/Pages/Campaigns/Campaigns.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Campaigns/Campaigns.razor
@@ -95,7 +95,7 @@
                     </Select>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is2">
-                    <Label>@L["OnlyAvailable"]</Label>
+                    <Label>@L["OnlyAvailableTitle"]</Label>
                     <Select TValue="bool" @bind-SelectedValue="Filters.OnlyAvailable" Size="Size.Small">
                         <SelectItem Value="@false">@L["All"]</SelectItem>
                         <SelectItem Value="@true">@L["OnlyAvailable"]</SelectItem>
