Commit for Pk-1923

--- a/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
@@ -1488,7 +1488,7 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-3">
-                                                            <label for="h-freight" class="form-label">@L["PaymentMethod"]<span class="text-danger"> *</span></label>
+                                                            <label for="h-freight" class="form-label">@L["CODPaymentMethod"]<span class="text-danger"> *</span></label>
                                                         </div>
                                                         <div class="col-8">
                                                             <Select @bind-SelectedValue="TCatNormal.TCatPaymentMethod">
